// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project-management/tasks/asana CreateTask when all inputs are correct should create a task 1`] = `
Ok {
  "value": Object {
    "assignee": "1203400160251645",
    "description": "Description of test task",
    "projectIds": Array [
      "1204486079660998",
    ],
    "taskId": "1204486403194398",
    "title": "Hello, World!",
    "url": "https://app.asana.com/0/1204486079660998/1204486403194398",
  },
}
`;

exports[`project-management/tasks/asana DeleteTask when all inputs are correct should delete a task 1`] = `
Ok {
  "value": undefined,
}
`;

exports[`project-management/tasks/asana ListTasks when all inputs are correct should read all tasks for specified project 1`] = `
Ok {
  "value": Object {
    "tasks": Array [
      Object {
        "taskId": "1204486406194351",
        "title": "Test 3",
      },
      Object {
        "taskId": "1204486145720593",
        "title": "Test 2",
      },
      Object {
        "taskId": "1204486202399277",
        "title": "Test 1",
      },
      Object {
        "taskId": "1204486081150274",
        "title": "Draft project brief",
      },
      Object {
        "taskId": "1204486081150276",
        "title": "Schedule kickoff meeting",
      },
      Object {
        "taskId": "1204486081150278",
        "title": "Share timeline with teammates",
      },
    ],
  },
}
`;

exports[`project-management/tasks/asana ReadTask when all inputs are correct should read task specified by id 1`] = `
Ok {
  "value": Object {
    "assignee": "1203400160251645",
    "description": "Task description",
    "projectIds": Array [
      "1204486079660998",
    ],
    "taskId": "1204486144283576",
    "title": "Test",
    "url": "https://app.asana.com/0/1204486079660998/1204486144283576",
  },
}
`;

exports[`project-management/tasks/asana UpdateTask when all inputs are correct should update a task 1`] = `
Ok {
  "value": Object {
    "assignee": "1203400160251645",
    "description": "Description of test task",
    "projectIds": Array [
      "1204486079660998",
    ],
    "taskId": "1204486406443644",
    "title": "Hello, World!",
    "url": "https://app.asana.com/0/1204486079660998/1204486406443644",
  },
}
`;
